--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jest-watch-typeahead": "0.3.0",
     "jquery": "^3.4.1",
     "lodash": "^4.17.10",
+    "materialize-css": "^1.0.0-rc.2",
     "mini-css-extract-plugin": "0.5.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.2.1",
@@ -51,6 +52,7 @@
     "react-app-polyfill": "^1.0.1",
     "react-dev-utils": "^9.0.1",
     "react-dom": "^16.8.6",
+    "react-materialize": "^3.3.3",
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
     "semver": "6.0.0",
