--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-dom": "^16.8.6",
     "react-materialize": "^3.3.3",
     "react-router-dom": "^5.0.1",
+    "react-swipeable-views": "^0.13.3",
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
     "semver": "6.0.0",
