--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "lodash": "^4.17.10",
     "materialize-css": "^1.0.0-rc.2",
     "mini-css-extract-plugin": "0.5.0",
+    "mui-datatables": "^2.7.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.2.1",
     "popper.js": "^1.15.0",
