--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "lodash": "^4.17.10",
     "materialize-css": "^1.0.0-rc.2",
     "mini-css-extract-plugin": "0.5.0",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.26",
     "mui-datatables": "^2.7.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.2.1",
@@ -61,6 +63,7 @@
     "react-dev-utils": "^9.0.1",
     "react-dom": "^16.8.6",
     "react-materialize": "^3.3.3",
+    "react-moment": "^0.9.2",
     "react-router-dom": "^5.0.1",
     "react-swipeable-views": "^0.13.3",
     "resolve": "1.10.0",
