--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-materialize": "^3.3.3",
     "react-moment": "^0.9.2",
     "react-router-dom": "^5.0.1",
+    "react-stripe-elements": "^4.0.0",
     "react-swipeable-views": "^0.13.3",
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
@@ -147,5 +148,8 @@
     "presets": [
       "react-app"
     ]
+  },
+  "engines": {
+    "node": "10.0"
   }
 }
