--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "file-loader": "3.0.1",
     "font-awesome": "^4.7.0",
     "fs-extra": "7.0.1",
-    "google-maps-react": "^2.0.2",
     "html-webpack-plugin": "4.0.0-beta.5",
     "identity-obj-proxy": "3.0.0",
     "is-wsl": "^1.1.0",
@@ -62,6 +61,7 @@
     "react-app-polyfill": "^1.0.1",
     "react-dev-utils": "^9.0.1",
     "react-dom": "^16.8.6",
+    "react-google-maps": "^9.4.5",
     "react-materialize": "^3.3.3",
     "react-moment": "^0.9.2",
     "react-router-dom": "^5.0.1",
